apps/talos_cluster/mediawiki/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mediawiki-valkey
  namespace: mediawiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mediawiki-valkey
  template:
    metadata:
      labels:
        app: mediawiki-valkey
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:7-alpine # {"$imagepolicy": "flux-system:valkey"}
          ports:
            - containerPort: 6379
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: mediawiki-valkey
  namespace: mediawiki
spec:
  selector:
    app: mediawiki-valkey
  ports:
    - port: 6379
      targetPort: 6379
