apps/talos_cluster/mediawiki/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mediawiki
  namespace: mediawiki
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - wiki.mtrnord.blog
  rules:
    - backendRefs:
        - name: mediawiki
          port: 80
      timeouts:
        request: 900s
        backendRequest: 900s
